--- a/H1.md
+++ b/H1.md
@@ -28,11 +28,13 @@ Loin 17.1.2023 klo 21.02 virtuaalikoneen Hyper-V:ssä valmiuteen ennen seuraavan
 
 ### Asennus
 
-Asennus alkoi 18.1.2023 klo 13:07 käynnistämällä virtuaalikone, levykuva boottasi ja pyysi valitsemaan Main Menu kohdassa mitä tehdään, valitsin kohdan Debian GNU/Linux Live (kernel 5.10.0-20-amd64). ![Add file: Upload](Picture1.png) </br>
+Asennus alkoi 18.1.2023 klo 13:07 käynnistämällä virtuaalikone, levykuva boottasi ja pyysi valitsemaan Main Menu kohdassa mitä tehdään, valitsin kohdan Debian GNU/Linux Live (kernel 5.10.0-20-amd64). ![Picture1](https://user-images.githubusercontent.com/122887740/232832332-63015bc0-3a53-42c7-a2f3-13b565530e7a.png) </br>
+
+
 Törmäsin heti alussa ongelmaan Hyper-V:n kanssa ja jouduin vaihtamaan virtuaalikoneen Generation asetuksen 1:stä 2:ksi. luomalla uuden virtuaalikoneen alusta. Pienen selvitys työn jälkeen loin Debiania varten ohjeiden (https://techlabs.blog/categories/debian-linux/create-a-debian-linux-virtual-machine-using-hyper-v) mukaisesti Hyper-V:lle uuden virtuaalikoneen ja asennus alkoi klo 13:30.
 
 Päästyäni alusta eteenpäin, päädyin Debianin livetyöpöydälle, josta pystyi valitsemaan kohdan Install Debian: </br>
-![Add file: Upload](Picture2.png)</br>
+![Picture2](https://user-images.githubusercontent.com/122887740/232832428-bf87ae0a-0921-459a-b5dc-03fbd9a81085.png)</br>
 
 Asennusparametrit:
 - Language: American English
@@ -41,17 +43,20 @@ Asennusparametrit:
 - Partitions: Erase disk (automatic partition), kryptaus ei valittuna
 - Users: mattis (Matti Siikanen) / log in automatically without asking for the password ei valittuna
 
-Summary: </br>
-![Add file: Upload](Picture3.png)
+Summary: </br>!
+[Picture3](https://user-images.githubusercontent.com/122887740/232832495-1a745f7f-406b-4796-ae18-e0de7a1561c9.png) </br>
 
 Tarkastelun jälkeen painettiin Install. Asennus kesti 7min (13:35-13:42). Asennuksen jälkeen kone meni boottiin ja pyysi irroittamaan siihen kytketyn levykuvan.</br>
-![Add file: Upload](Picture4.png)
+![Picture4](https://user-images.githubusercontent.com/122887740/232832560-fd486df4-4527-40e4-a89a-bd3b5ad7a9f6.png) </br>
+
 
 Uudelleenkäynnistyksen jälkeen kone siirtyi Debianin kirjautumisruutuun, johon syötettiin asennuksen aikana annetut tunnukset:</br>
-![Add file: Upload](Picture5.png)
+![Picture5](https://user-images.githubusercontent.com/122887740/232832596-a92166a1-5482-4dff-ac74-11ac2cbbd484.png) </br>
+
 
 Kirjautumisen jälkeen päästiin työpöydälle:</br>
-![Add file: Upload](Picture6.png)
+![Picture6](https://user-images.githubusercontent.com/122887740/232832655-f90152f4-6721-401b-ad85-fff5fef0cbfd.png) </br>
+
 
 ### Viimeistely / Lopetus
 Kokonaisuudessaan asennukseen meni sähellyksineen noin 38 min. Hyper-V virtuaalikoneongelman lisäksi asennuksessa ei ilmennyt muita ongelmia.
