--- a/H1.md
+++ b/H1.md
@@ -43,8 +43,8 @@ Asennusparametrit:
 - Partitions: Erase disk (automatic partition), kryptaus ei valittuna
 - Users: mattis (Matti Siikanen) / log in automatically without asking for the password ei valittuna
 
-Summary: </br>!
-[Picture3](https://user-images.githubusercontent.com/122887740/232832495-1a745f7f-406b-4796-ae18-e0de7a1561c9.png) </br>
+Summary: </br>
+![Picture3](https://user-images.githubusercontent.com/122887740/232832495-1a745f7f-406b-4796-ae18-e0de7a1561c9.png) </br>
 
 Tarkastelun jälkeen painettiin Install. Asennus kesti 7min (13:35-13:42). Asennuksen jälkeen kone meni boottiin ja pyysi irroittamaan siihen kytketyn levykuvan.</br>
 ![Picture4](https://user-images.githubusercontent.com/122887740/232832560-fd486df4-4527-40e4-a89a-bd3b5ad7a9f6.png) </br>
